--- a/app/src/main/res/layout/fragment_availability.xml
+++ b/app/src/main/res/layout/fragment_availability.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.SourceReportFragment">
+    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.AvailabilityFragment">
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
