--- a/app/src/main/res/layout/source_list_content.xml
+++ b/app/src/main/res/layout/source_list_content.xml
@@ -27,21 +27,27 @@
             android:textAppearance="?attr/textAppearanceListItem"/>
     </RelativeLayout>
 
-    <!--<RelativeLayout
+    <RelativeLayout
         android:orientation="horizontal" android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    </RelativeLayout>-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/reportTypeCondition"
+            android:layout_alignParentRight="true"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/reportReporter"
+            android:layout_alignParentLeft="true"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+    </RelativeLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/reportLocation"
         android:layout_alignParentLeft="true"
         android:textAppearance="?attr/textAppearanceListItem"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/reportTypeCondition"
-        android:textAppearance="?attr/textAppearanceListItem"/>
-    <!---->
 </LinearLayout>
 </android.support.v7.widget.CardView>
