--- a/app/src/main/res/layout/activity_edit_source_report.xml
+++ b/app/src/main/res/layout/activity_edit_source_report.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    android:id="@+id/activity_submit_source_report">
+    android:id="@+id/activity_edit_source_report">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -12,10 +12,10 @@
         android:layout_marginTop="25dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/textInputLayout">
+        android:id="@+id/textInputLayoutEdit">
 
         <EditText
-            android:id="@+id/nameReportEditText"
+            android:id="@+id/nameReportEditTextEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -28,13 +28,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_below="@+id/textInputLayout"
+        android:layout_below="@+id/textInputLayoutEdit"
         android:layout_marginRight="60dp"
         android:layout_alignParentStart="true"
-        android:id="@+id/textInputLayout2">
+        android:id="@+id/textInputLayout2Edit">
 
         <EditText
-            android:id="@+id/locationReportEditText"
+            android:id="@+id/locationReportEditTextEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -43,58 +43,58 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addLocation"
+        android:id="@+id/addLocationEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         app:fabSize="mini"
         app:srcCompat="@mipmap/ic_add_white_24dp"
-        android:layout_alignBottom="@+id/textInputLayout2"
+        android:layout_alignBottom="@+id/textInputLayout2Edit"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp" />
 
     <TextView
-        android:id="@+id/textViewTypeResourceReport"
+        android:id="@+id/textViewTypeResourceReportEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text="Water Type"
-        android:layout_below="@+id/textInputLayout2"
+        android:layout_below="@+id/textInputLayout2Edit"
         android:layout_marginLeft="26dp" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerType"
+        android:id="@+id/spinnerTypeEdit"
         android:layout_marginTop="20dp"
         android:layout_marginRight="17dp"
         android:layout_marginLeft="17dp"
-        android:layout_below="@+id/textViewTypeResourceReport"
+        android:layout_below="@+id/textViewTypeResourceReportEdit"
         android:layout_centerVertical="true" />
 
     <TextView
-        android:id="@+id/textViewConditionResourceReport"
+        android:id="@+id/textViewConditionResourceReportEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="26dp"
         android:text="Water Condition"
-        android:layout_below="@+id/spinnerType" />
+        android:layout_below="@+id/spinnerTypeEdit" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:id="@+id/spinnerCondition"
+        android:id="@+id/spinnerConditionEdit"
         android:layout_marginRight="17dp"
         android:layout_marginLeft="17dp"
-        android:layout_below="@+id/textViewConditionResourceReport" />
+        android:layout_below="@+id/textViewConditionResourceReportEdit" />
 
     <Button
-        android:id="@+id/submitReport"
+        android:id="@+id/submitReportEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinnerCondition"
+        android:layout_below="@+id/spinnerConditionEdit"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"
         android:text="Submit" />
