--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -54,7 +54,7 @@
         android:layout_alignEnd="@+id/cancel_profile"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:labelFor="@id/edit_home_adress"/>
+        android:labelFor="@id/edit_home_address"/>
 
     <EditText
         android:layout_width="match_parent"
