--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.LoginActivity">
+    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.LoginActivityOld">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_login_username"
