--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:itemBackground="@color/colorPrimary"
-    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.WelcomeActivity">
+    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.LoginActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
